navigation and delete with keyboard

--- a/sample.htm
+++ b/sample.htm
@@ -35,7 +35,7 @@
                 var inp4 = Form.AddInput(470,225,150,180);
                 inp4.SetBorder(2, "#00FF00", 10);
                 inp4.SetFont(34, "#000000", "Arial","left");
-                inp4.SetValue('abcd\nefgh');
+                inp4.SetValue('abcd\nexh\nfghjk');
                 inp4.SetBackground("#FFFFFF");
                 inp4.SetId("white");
                 inp4.editable = true;
